--- a/src/app/login/login-create/login-create.component.scss
+++ b/src/app/login/login-create/login-create.component.scss
@@ -6,8 +6,8 @@
 }
 
 .card {
-  max-width: 600;
-  width: 600px;
+  max-width: 800px;
+  width: 800px;
   margin-bottom: 20px;
 }
 
@@ -15,9 +15,9 @@
   text-align: center;
 }
 
-.width-75 {
+.width-85 {
   margin:0 auto;
-  width: 75%;
+  width: 85%;
 }
 
 form {
