--- a/src/app/company/company-delete/company-delete.component.html
+++ b/src/app/company/company-delete/company-delete.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="example-container">
-    <h2 mat-dialog-title>Delete a company</h2>
-    <mat-dialog-content>Are you sure you want to delete {{company.name}} It will also delete all its {{company.numberOfComputers}} computers.</mat-dialog-content>
+    <h2 mat-dialog-title>{{ 'COMPANY.DELETE_COMPANY' | translate }}</h2>
+    <mat-dialog-content>{{ 'COMPANY.CONFIRM_DELETION' | translate :{'name': company.name, 'number':company.numberOfComputers } }}</mat-dialog-content>
     <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>No</button>
-      <button mat-button [mat-dialog-close]="true" (click)="delete(company)">Yes</button>
+      <button mat-button mat-dialog-close>{{ 'GENERAL.NO' | translate }}</button>
+      <button mat-button [mat-dialog-close]="true" (click)="delete(company)">{{ 'GENERAL.YES' | translate }}</button>
     </mat-dialog-actions>
   </div>
 </div>
