--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,19 +13,26 @@
     <mat-divider></mat-divider>
 
     <div class="width-75">
-      <form [formGroup]="loginForm">
+      <form [formGroup]="loginForm" (keydown)="submit($event)">
         <mat-form-field class="full-width">
           <input matInput placeholder="Username" formControlName="username" required>
+          <mat-error>
+            Username is required
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <input matInput placeholder="Password" type="password" formControlName="password" required>
+          <mat-error>
+            Password is required
+          </mat-error>
         </mat-form-field>
+        <div id="loginButtonContainer" class="center">
+          <button id="loginButton" mat-raised-button (click)="login()" color="primary">Login</button>
+        </div>
       </form>
     </div>
 
-    <div id="loginButtonContainer" class="center">
-      <button id="loginButton" mat-raised-button (click)="login()" color="primary">Login</button>
-    </div>
+
 
     <mat-divider></mat-divider>
 
