--- a/src/app/computer/computers/computers.component.scss
+++ b/src/app/computer/computers/computers.component.scss
@@ -72,3 +72,16 @@ button{
   padding: 15px;
   border-radius: 50%;
 }
+
+.example-radio-group {
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.example-radio-button {
+  margin: 5px;
+}
+
+.example-selected-value {
+  margin: 15px 0;
+}
