--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -22,6 +22,15 @@
 
     <button class="col-md-1" mat-raised-button color="primary" (click)="search()">Search</button>
     <span class="col-md-3"></span>
+
+    <mat-form-field>
+      <mat-select placeholder="Sorting options" [(value)]="sortSelected" (selectionChange)="sort()">
+        <mat-option *ngFor="let sort of sortOptions" [value]="sort.value">
+          {{ sort.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
     <button class="col-md-3 col-lg-2" mat-raised-button color="primary" (click)="create()">Create a new computer</button>
   </div>
 
