--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -1,27 +1,36 @@
 <div class="container" *ngIf="companies" @staggerAnim>
   <div class="row align-items-center controlBar shadow">
-    <mat-form-field class="col-md-3 col-sm-12">
-      <mat-icon *ngIf="searchValue"
-                matPrefix
-                class="clearSearchIcon"
-                aria-label="Clear search"
-                (click)="clearSearch()"
-                color="warn">clear</mat-icon>
+    <div class="col-md-5">
+      <div class="row align-items-center">
+        <mat-form-field class="col-md-6">
+          <mat-icon *ngIf="searchValue"
+                    matPrefix
+                    class="clearSearchIcon"
+                    aria-label="Clear search"
+                    (click)="clearSearch()"
+                    color="warn">clear</mat-icon>
 
-      <mat-icon *ngIf="!searchValue"
-                matPrefix>search</mat-icon>
+          <mat-icon *ngIf="!searchValue"
+                    matPrefix>search</mat-icon>
 
           <input matInput placeholder="{{ 'COMPANY.SEARCH' | translate }}" [(ngModel)]="searchValue">
-      </mat-form-field>
-      <button class="col-md-1" mat-raised-button color="primary" (click)="search()">{{ 'COMPANY.SEARCH' | translate }}</button>
-      <mat-form-field class="col-md-3">
-        <mat-select placeholder="Sorting options" [(value)]="sortSelected" (selectionChange)="sort()">
-          <mat-option *ngFor="let sort of sortOptions" [value]="sort.value">
-            {{ sort.viewValue }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <button class="col-md-3 col-lg-2" mat-raised-button color="primary" (click)="create()">{{ 'COMPANY.CREATE' | translate }}</button>
+        </mat-form-field>
+        <button class="col-md-5" mat-raised-button color="primary" (click)="search()">{{ 'COMPANY.SEARCH' | translate }}</button>
+      </div>
+    </div>
+    <span class="col-md-2"></span>
+    <div class="col-md-5">
+      <div class="row align-items-center">
+        <mat-form-field class="col-md-6">
+          <mat-select placeholder="Sorting options" [(value)]="sortSelected" (selectionChange)="sort()">
+            <mat-option *ngFor="let sort of sortOptions as any" [value]="sort.value">
+              {{ sort.viewValue }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <button class="col-md-5" mat-raised-button color="primary" (click)="create()">{{ 'COMPANY.CREATE' | translate }}</button>
+      </div>
+    </div>
   </div>
 
   <table class="table table-bordered customTable shadow">
