--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -21,9 +21,8 @@
     </mat-radio-group>
 
     <button class="col-md-1" mat-raised-button color="primary" (click)="search()">Search</button>
-    <span class="col-md-3"></span>
 
-    <mat-form-field>
+    <mat-form-field class="col-md-2 ">
       <mat-select placeholder="Sorting options" [(value)]="sortSelected" (selectionChange)="sort()">
         <mat-option *ngFor="let sort of sortOptions" [value]="sort.value">
           {{ sort.viewValue }}
