[FIX] : Merge and service request to server

--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -47,7 +47,7 @@
     <mat-icon>arrow_upward</mat-icon>
   </button>
 
-  <mat-paginator #paginator *ngIf="pageEvent" color="primary" [length]="pageEvent.length"
+  <mat-paginator *ngIf="pageEvent" #paginator color="primary" [length]="pageEvent.length"
                  [pageSize]="pageEvent.pageSize"
                  [pageSizeOptions]="pageSizeOptions"
                  (page)="pageEvent = changePage($event)"
