--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -22,7 +22,7 @@
     <div class="col-md-5">
       <div class="row align-items-center">
         <mat-form-field class="col-md-6">
-          <mat-select placeholder="Sorting options" [(value)]="sortSelected" (selectionChange)="sort()">
+          <mat-select placeholder="{{ 'SELECT.SORTING_OPTIONS' | translate }}" [(value)]="sortSelected" (selectionChange)="sort()">
             <mat-option *ngFor="let sort of sortOptions as any" [value]="sort.value">
               {{ sort.viewValue }}
             </mat-option>
