--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -11,7 +11,7 @@
       <mat-icon *ngIf="!searchValue"
                 matPrefix>search</mat-icon>
 
-      <input matInput placeholder="Search" [(ngModel)]="searchValue">
+      <input matInput placeholder="{{ 'COMPUTER.SEARCH' | translate }}" [(ngModel)]="searchValue">
     </mat-form-field>
 
     <mat-radio-group class="example-radio-group" [(ngModel)]="searchType">
@@ -20,26 +20,26 @@
       </mat-radio-button>
     </mat-radio-group>
 
-    <button class="col-md-1" mat-raised-button color="primary" (click)="search()">Search</button>
+    <button class="col-md-1" mat-raised-button color="primary" (click)="search()">{{ 'COMPUTER.SEARCH' | translate }}</button>
 
     <mat-form-field class="col-md-2 ">
-      <mat-select placeholder="Sorting options" [(value)]="sortSelected" (selectionChange)="sort()">
+      <mat-select placeholder="{{ 'SELECT.SORTING_OPTIONS' | translate }}" [(value)]="sortSelected" (selectionChange)="sort()">
         <mat-option *ngFor="let sort of sortOptions" [value]="sort.value">
           {{ sort.viewValue }}
         </mat-option>
       </mat-select>
     </mat-form-field>
 
-    <button class="col-md-3 col-lg-2" mat-raised-button color="primary" (click)="create()">Create a new computer</button>
+    <button class="col-md-3 col-lg-2" mat-raised-button color="primary" (click)="create()">{{ 'COMPUTER.CREATE' | translate }}</button>
   </div>
 
   <table class="customTable table table-bordered shadow">
     <thead>
-    <th style="width: 50%">Name</th>
-    <th>Company</th>
-    <th>Introduced</th>
-    <th>Discontinued</th>
-    <th>Delete</th>
+    <th style="width: 50%">{{ 'COMPUTER.NAME' | translate }}</th>
+    <th>{{ 'COMPUTER.COMPANY' | translate }}</th>
+    <th>{{ 'COMPUTER.INTRODUCED' | translate }}</th>
+    <th>{{ 'COMPUTER.DISCONTINUED' | translate }}</th>
+    <th>{{ 'COMPUTER.DELETE' | translate }}</th>
     </thead>
     <tr *ngFor="let computer of computers" app-computer [computer]="computer" (delete)="computerDeleted(computer)">
     </tr>
