[FIX] computer name is now checked by default for search

--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -27,6 +27,9 @@
         <mat-option *ngFor="let sort of sortOptions" [value]="sort.value">
           {{ sort.viewValue }}
         </mat-option>
+        <mat-option *ngFor="let sort of sortOptions" [value]="sort.value">
+          {{ sort.viewValue }}
+        </mat-option>
       </mat-select>
     </mat-form-field>
 
