--- a/src/app/login/login-create/login-create.component.html
+++ b/src/app/login/login-create/login-create.component.html
@@ -13,15 +13,13 @@
           <input matInput placeholder="{{ 'LOGIN.USERNAME' | translate }}" formControlName="username" required>
           <mat-error>{{ 'LOGIN.ERROR.USERNAME' | translate }}</mat-error>
         </mat-form-field>
-
-        <mat-form-field class="full-width">
+        <mat-form-field class="full-width vertical-space">
           <input matInput placeholder="{{ 'LOGIN.PASSWORD' | translate }}" type="password" formControlName="password" required>
           <mat-error>
               {{ 'LOGIN.ERROR.PASSWORD' | translate }}
           </mat-error>
         </mat-form-field>
-
-        <mat-form-field class="full-width">
+        <mat-form-field class="full-width vertical-space">
           <input matInput placeholder="{{ 'LOGIN.CONFIRM_PASSWORD' | translate }}" type="password" formControlName="passwordConfirmation" required>
           <mat-error>
               {{ 'LOGIN.ERROR.PASSWORD_CONFIRM' | translate }}
