--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -37,9 +37,9 @@
     <thead>
       <th style="width: 66.6%">{{ 'COMPANY.COMPANY' | translate }}</th>
       <th style="width: 16.6%">{{ 'COMPANY.SEE' | translate }}</th>
-      <th style="width: 16.6%">{{ 'COMPANY.DELETE' | translate }}</th>
+      <th *ngIf="isAdmin" style="width: 16.6%">{{ 'COMPANY.DELETE' | translate }}</th>
     </thead>
-    <tr *ngFor=" let company of companies" app-company [company]="company" (delete)="companyDeleted(company)">
+    <tr *ngFor=" let company of companies" app-company [company]="company" [isAdmin]="isAdmin" (delete)="companyDeleted(company)">
     </tr>
   </table>
 
