Changed translation and added animations for computer

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -15,7 +15,7 @@
   </button>
 </td>
 <td class="text-center aligned-td" *ngIf="isAdmin">
-  <button mat-raised-button color="warn" (click)="deleteCompany()">
+  <button mat-raised-button color="warn" (click)="deleteCompany(company)">
     <mat-icon>delete</mat-icon>
   </button>
 </td>
