--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="computers">
+<div class="container" *ngIf="computers" @staggerAnim>
   <div class="row align-items-center controlBar shadow">
     <mat-form-field class="col-md-3 col-sm-12" (keydown)="triggerSearch($event)">
       <mat-icon *ngIf="searchValue"
