--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="companies" @staggerAnim>
   <div class="row align-items-center controlBar shadow">
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="row align-items-center">
         <mat-form-field class="col-md-6" (keydown)="triggerSearch($event)">
           <mat-icon *ngIf="searchValue"
@@ -18,8 +18,7 @@
         <button class="col-md-5" mat-raised-button color="primary" (click)="search()">{{ 'COMPANY.SEARCH' | translate }}</button>
       </div>
     </div>
-    <span class="col-md-2"></span>
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="row align-items-center">
         <mat-form-field class="col-md-6">
           <mat-select placeholder="{{ 'SELECT.SORTING_OPTIONS' | translate }}" [(value)]="sortSelected" (selectionChange)="sort()">
@@ -33,7 +32,7 @@
     </div>
   </div>
 
-  <table class="table table-bordered customTable shadow">
+  <table class="table table-bordered customTable shadow table-resp">
     <thead>
       <th style="width: 66.6%">{{ 'COMPANY.COMPANY' | translate }}</th>
       <th style="width: 16.6%">{{ 'COMPANY.SEE' | translate }}</th>
