[FEAT] : Properties pour l'adresse IP et fix responsive

--- a/src/app/computer/computer.component.html
+++ b/src/app/computer/computer.component.html
@@ -9,7 +9,7 @@
 <td class="text-center" *ngIf="computer.discontinued">{{computer.discontinued}}</td>
 <td class="text-center" *ngIf="!computer.discontinued">-</td>
 
-<td class="text-center" *ngIf="isAdmin">
+<td class="text-center" style="width: 10%" *ngIf="isAdmin">
   <button mat-raised-button color="warn" (click)="deleteComputer()">
     <mat-icon>delete</mat-icon>
   </button>
