--- a/src/app/computer/computer.component.html
+++ b/src/app/computer/computer.component.html
@@ -1,6 +1,6 @@
 <td (click)="updateComputer()">{{computer.name}}</td>
 
-<td class="text-center" *ngIf="computer.manufacturer">{{computer.manufacturer}}</td>
+<td class="text-center" style="width: 14%" *ngIf="computer.manufacturer">{{computer.manufacturer}}</td>
 <td class="text-center" *ngIf="!computer.manufacturer">-</td>
 
 <td class="text-center" *ngIf="computer.introduced">{{computer.introduced}}</td>
