--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="computers">
-  <div class="row row-no-padding align-items-center controlBar shadow">
+  <div class="row row-no-padding align-items-center controlBar shadow paddingLeft">
     <mat-form-field class="col-md-2" (keydown)="triggerSearch($event)">
       <mat-icon *ngIf="searchValue"
                 matPrefix
