--- a/src/theme.scss
+++ b/src/theme.scss
@@ -231,7 +231,14 @@ $theme: (
 
 .table-resp{
  overflow-x: auto;
- display: block;
+ display: table;
  width: 100%;
+}
+
+.table-container{
+  width: 100%;
+	overflow-y: auto;
+	_overflow: auto;
+	margin: 0 0 1em;
 }
 
