[FEAT] Update computer form

--- a/src/app/computer/computer-update/computer-update.component.html
+++ b/src/app/computer/computer-update/computer-update.component.html
@@ -1,3 +1,38 @@
-<p>
-  computer-update works!
-</p>
+<div class="cardContainer">
+  <div>
+    <h1>{{ 'COMPUTER.UPDATE' }}</h1>
+
+    <mat-divider></mat-divider>
+
+    <form [formGroup]="computerAddForm">
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Computer name" required formControlName="name" name="name" #name/>
+        <mat-error>{{ 'COMPUTER.ERROR.NAME' | translate }}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <input matInput id="introduced" formControlName="introduced" [errorStateMatcher]="matcher"
+                placeholder="Introduction date" name="introduced" type="date" [value]="introduced"
+                (change)="updateDate()">
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <input  matInput id="discontinued" formControlName="discontinued" [errorStateMatcher]="matcher"
+                placeholder="Discontinuation date" id="discontinued"
+                name="discontinued" type="date" [value]="discontinued">
+        <mat-error *ngIf="computerAddForm.hasError('introducedAfterDiscontinued')">{{ 'COMPUTER.ERROR.INTRODUCED_AFTER_DISCONTINUED' }}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <mat-select [(value)]="selectedCompany_id" formControlName="company">
+          <mat-option value="">None</mat-option>
+          <mat-option *ngFor="let c of companies" [value]="c.id">{{c.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <div>
+        <button mat-raised-button color="primary" (click)=submit()>Confirmer</button>
+      </div>
+    </form>
+  </div>
+</div>
